Port code generator to JEP-434